# lab04-solid-jokers

./: CMakeLists.txt  Digital.cpp  Digital.h  EmailReceipt.cpp  EmailReceipt.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  IDiscount.h  IReceiptSender.cpp  IReceiptSender.h  IReplace.h  ISave.cpp  ISave.h  IShipment.h  MainGame.cpp  Physical.cpp  Physical.h  PrintReceipt.cpp  PrintReceipt.h  README.md  ScreenReceipt.cpp  ScreenReceipt.h  Streaming.cpp  Streaming.h  UML Diagram
